--- a/src/components/AccessoriesPage/AccessoriesModel/AccessoriesModel.module.scss
+++ b/src/components/AccessoriesPage/AccessoriesModel/AccessoriesModel.module.scss
@@ -92,7 +92,6 @@
           .item_desc {
             display: none;
             position: absolute;
-            display: box;
             border: 1px solid $grey;
             background-color: $grey;
             text-align: center;
@@ -161,7 +160,7 @@
 
         .btn {
           font-family: LytigaPro;
-          display: box;
+          display: flex;
           cursor: pointer;
           box-sizing: border-box;
 
